[sdk-187] Added feedback widget: (#78)
* 20.11.0 Features Added:
- Added Surveys and NPS feedback widgets
- Added replaceAllAppKeysInQueueWithCurrentAppKey method to replace all app keys in queue with the current app key
- Added removeDifferentAppKeysFromQueue method to remove all different app keys from the queue
- Added setStarRatingDialogTexts method to set text's for different fields of star rating dialog
- Added recordAttributionID method for iOS.

* getDeviceIdAuthor implemented for iOS.

* Android sdk version updated

* Countly pod updated to 20.11.1 for iOS and some small fixes.

* Googleservices enables for plugin

* Feedback widget changes implemented:
— getFeebackwidgets return list of object.
— presentFeedbackWidget accept widget object as a parameter.

--- a/plugin.xml
+++ b/plugin.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<plugin xmlns="http://apache.org/cordova/ns/plugins/1.0" xmlns:android="http://schemas.android.com/apk/res/android" id="countly-sdk-cordova" version="20.4.0">
+<plugin xmlns="http://apache.org/cordova/ns/plugins/1.0" xmlns:android="http://schemas.android.com/apk/res/android" id="countly-sdk-cordova" version="20.11.0">
 
   <name>Countly</name>
 
@@ -49,7 +49,7 @@
         <source url="https://github.com/CocoaPods/Specs.git"/>
       </config>
       <pods use-frameworks="true">
-        <pod name="Countly" version="20.04.3"/>
+        <pod name="CountlyPod" version="20.11.1"/>
       </pods>
     </podspec>
     <!-- Push notification -->
@@ -75,6 +75,8 @@
       <feature name="CountlyCordova">
         <param name="android-package" value="ly.count.android.sdk.CountlyCordova" />
       </feature>
+      <preference name="GradlePluginGoogleServicesEnabled" value="true" />
+      <preference name="GradlePluginGoogleServicesVersion" value="4.2.0" />
     </config-file>
 
     <config-file target="AndroidManifest.xml" parent="/manifest">
@@ -92,7 +94,7 @@
 
     <source-file src="src/android/CountlyCordova.java" target-dir="src/ly/count/android/sdk"/>
     <source-file src="src/android/CountlyNative.java" target-dir="src/ly/count/android/sdk"/>
-    <framework src="ly.count.android:sdk:20.04.5" />
+    <framework src="ly.count.android:sdk:20.11.2" />
 
     <!-- Push notification -->
     <config-file target="AndroidManifest.xml" parent="/manifest/application">
@@ -108,7 +110,8 @@
         <permission android:name="${applicationId}.CountlyPush.BROADCAST_PERMISSION" android:protectionLevel="signature" />
     </config-file>
     <dependency id="cordova-support-google-services" version="~1.4.0"/>
-    <framework src="com.google.firebase:firebase-messaging:20.1.7" />
+    <!-- if any version higher than 18.0.0 is used then it forces AndroidX -->
+    <framework src="com.google.firebase:firebase-messaging:18.0.0" />
     <source-file src="src/android/CountlyMessagingService.java" target-dir="src/ly/count/android/sdk"/>
   </platform>
 
