[sdk-184] APM fixes app_start, foreground and background tracking. (#80)
* — APM changes implemented for app_start, foreground and background.
— old iOS platform check was not working fixed.
- android plugin auto initialise implemented

* Example app updated for APM changes

* onLoad callback added in example app.

* Changelog file added

* Changelog updated

* Update Countly.js

Added missing bracket

--- a/plugin.xml
+++ b/plugin.xml
@@ -74,6 +74,7 @@
     <config-file target="res/xml/config.xml" parent="/*">
       <feature name="CountlyCordova">
         <param name="android-package" value="ly.count.android.sdk.CountlyCordova" />
+        <param name="onload" value="true" />
       </feature>
       <preference name="GradlePluginGoogleServicesEnabled" value="true" />
       <preference name="GradlePluginGoogleServicesVersion" value="4.2.0" />
