SDK-373 : SDK Release 20.11.1 (#86)
* setLoggingEnabled function fixes.

* SDK release changes:
— SDK version increased to 20.11.1
— Changelog updated
— Underlying SDK versions updated

* Updated underlying iOS SDK to 20.11.2

* Update CHANGELOG.md

* Update LICENSE

* Update README.md

* Update README.md

Co-authored-by: ArtursKadikis <kadikis.arturs@gmail.com>

--- a/plugin.xml
+++ b/plugin.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<plugin xmlns="http://apache.org/cordova/ns/plugins/1.0" xmlns:android="http://schemas.android.com/apk/res/android" id="countly-sdk-cordova" version="20.11.0">
+<plugin xmlns="http://apache.org/cordova/ns/plugins/1.0" xmlns:android="http://schemas.android.com/apk/res/android" id="countly-sdk-cordova" version="20.11.1">
 
-  <name>Countly</name>
+  <name>Countly Cordova SDK</name>
 
   <description>
     Countly is an innovative, real-time, open source mobile analytics and push notifications platform. It collects data from mobile devices, and visualizes this information to analyze mobile application usage and end-user behavior. There are two parts of Countly: the server that collects and analyzes data, and mobile SDK that sends this data. Both parts are open source with different licensing terms.
   </description>
 
-  <author>Trinisoft Technologies Pvt. Ltd.</author>
+  <author>Countly</author>
 
-  <license>Open source with different licensing terms.</license>
+  <license>MIT</license>
 
   <keywords>Event, Mobile analytical</keywords>
 
@@ -141,7 +141,7 @@
 
     <source-file src="src/android/CountlyCordova.java" target-dir="src/ly/count/android/sdk"/>
     <source-file src="src/android/CountlyNative.java" target-dir="src/ly/count/android/sdk"/>
-    <framework src="ly.count.android:sdk:20.11.2" />
+    <framework src="ly.count.android:sdk:20.11.8" />
 
     <!-- Push notification -->
     <config-file target="AndroidManifest.xml" parent="/manifest/application">
